--- a/compose.yml
+++ b/compose.yml
@@ -10,3 +10,4 @@ services:
       - ./docker/environments/mongodb.env
     volumes:
       - ./docker/db/mongodb:/data/mongodb
+      - ./docker/configs/mongodb/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
